@@ -1,12 +1,12 @@
 /*
  * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
+ * Copyright (c) 2011-2023, FrostWire(R). All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -122,10 +122,8 @@ public class Cursor {
      */
     public int getCount() {
         try {
-            rs.last();
-            int rows = rs.getRow();
-            rs.beforeFirst();
-            return rows;
+            rs.next();
+            return rs.getRow();
         } catch (SQLException e) {
             LOG.warn("Error getting result set size", e);
         }
