@@ -1,19 +1,18 @@
 /*
  * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2014, FrostWire(R). All rights reserved.
+ * Copyright (c) 2011-2023, FrostWire(R). All rights reserved.
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.frostwire.search;
@@ -38,8 +37,8 @@ import java.io.IOException;
 public final class CrawlCacheDB {
     private static final Logger LOG = Logger.getLogger(CrawlCacheDB.class);
     private static final String DATABASE_NAME = "crawldb";
-    private static final int DATABASE_VERSION = 1;
-    private static final String TABLE_NAME = "CacheData";
+    private static final int DATABASE_VERSION = 2;
+    private static final String TABLE_NAME = "cache_data";
     private static final String DEFAULT_SORT_ORDER = Columns.DATE_ADDED + " DESC";
     private final static CrawlCacheDB instance = new CrawlCacheDB();
 
@@ -90,7 +89,11 @@ public final class CrawlCacheDB {
 
     void truncate() {
         SQLiteDatabase db = databaseHelper.getWritableDatabase();
-        db.execSQL("TRUNCATE TABLE " + TABLE_NAME);
+        //SQLite does not have an explicit TRUNCATE TABLE command like other databases.
+        // Instead, it has added a TRUNCATE optimizer to the DELETE statement.
+        // To truncate a table in SQLite, you just need to execute a DELETE statement without a WHERE clause.
+        // The TRUNCATE optimizer handles the rest.
+        db.execSQL("DELETE FROM " + TABLE_NAME);
     }
 
     @SuppressWarnings("unused")
@@ -107,7 +110,8 @@ public final class CrawlCacheDB {
         public static final String ID = "id";
         public static final String DATA = "data";
         static final String KEY = "key";
-        static final String DATE_ADDED = "dateAdded";
+        static final String DATE_ADDED = "date_added";
+
         private Columns() {
         }
     }
@@ -130,8 +134,7 @@ public final class CrawlCacheDB {
                     LOG.warn("Unable to delete old smart search database");
                 }
             }
-            db.execSQL("SET IGNORECASE TRUE");
-            db.execSQL("CREATE TABLE " + TABLE_NAME + " (" + Columns.ID + " INTEGER IDENTITY," + Columns.KEY + " VARCHAR," + Columns.DATA + " BINARY," + Columns.DATE_ADDED + " BIGINT" + ");");
+            db.execSQL("CREATE TABLE " + TABLE_NAME + " (" + Columns.ID + " INTEGER PRIMARY KEY," + Columns.KEY + " VARCHAR," + Columns.DATA + " BLOB," + Columns.DATE_ADDED + " INTEGER" + ");");
             db.execSQL("CREATE INDEX idx_" + TABLE_NAME + "_" + Columns.ID + " ON " + TABLE_NAME + " (" + Columns.ID + ")");
             db.execSQL("CREATE INDEX idx_" + TABLE_NAME + "_" + Columns.KEY + " ON " + TABLE_NAME + " (" + Columns.KEY + ")");
         }
